[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"

[dependencies]
argparse = "0.2.2"
xdg = "2.5.2"

[profile.release]
strip = true # Automatically strip symbols from the ELF file.
lto = true
opt-level = 3 # Optimize for speed.
panic = "abort" # Just abort code execution on panic!, no stack info
#opt-level = "z" # Optimize for size.
#codegen-units = 1